"""
Copyright (C) 2022 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.

You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag", "string_list_flag")
load("@env//:env.bzl", "env")
load("//build/bazel/flags:common.bzl", "is_env_true")

package(default_visibility = ["//visibility:public"])

bool_flag(
    name = "with_tidy",
    build_setting_default = is_env_true(env.get("WITH_TIDY")),
)

bool_flag(
    name = "allow_local_tidy_true",
    build_setting_default = is_env_true(env.get("ALLOW_LOCAL_TIDY_TRUE")),
)

_with_tidy_flags = env.get("WITH_TIDY_FLAGS", None)

string_list_flag(
    name = "with_tidy_flags",
    build_setting_default = _with_tidy_flags.split(" ") if _with_tidy_flags != None else [],
)

string_flag(
    name = "default_tidy_header_dirs",
    build_setting_default = env.get("DEFAULT_TIDY_HEADER_DIRS", ""),
)

string_flag(
    name = "tidy_timeout",
    build_setting_default = env.get("TIDY_TIMEOUT", ""),
)
