# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

java_binary(
    name = "PrintSoongClasses",
    srcs = ["PrintClasses.java"],
    main_class = "PrintClasses",
    target_compatible_with = ["//build/bazel_common_rules/platforms/os:linux"],
    deps = ["//external/error_prone:error_prone_core_jars"],
)

java_binary(
    name = "PrintBazelClasses",
    srcs = ["PrintClasses.java"],
    main_class = "PrintClasses",
    target_compatible_with = ["//build/bazel_common_rules/platforms/os:linux"],
    deps = [":BazelJavaBuilder"],
)

java_import(
    name = "BazelJavaBuilder",
    jars = ["@remote_java_tools//:JavaBuilder"],
)
